# ai-that-works

./: .gitignore  README.md  data.json  feed.xml
2025-09-23-evals-for-classification/: README.md
2025-10-21-agentic-rag-context-engineering/: ARCHITECTURE.md  README.md  TUI_LAYOUT.md  agent_runtime.py  email.md  main.py  meta.md  pyproject.toml  tui.py
2025-10-21-agentic-rag-context-engineering/baml_src/: agent-tools.baml  agent.baml
2025-10-28-ralph-wiggum-coding-agent-power-tools/: IMPLEMENTATION_PLAN.md  PROMPT.md  build.zig  email.md  genspecs.md  genspecs.sh  meta.md
2025-10-28-ralph-wiggum-coding-agent-power-tools/minibaml/: IMPLEMENTATION_PLAN.md  README.md  build.zig  build.zig.zon  test_strategies.baml
2025-10-28-ralph-wiggum-coding-agent-power-tools/specs/: changelog_changelog.mdx  examples_interactive-examples.mdx  examples_prompt-engineering_chat.mdx  guide_baml-advanced_reusing-prompt-snippets.mdx  guide_baml-basics_streaming.mdx  guide_baml-basics_testing-functions.mdx  guide_boundary-cloud_observability_tracking-usage.mdx  guide_comparisons_baml-vs-ai-sdk.mdx  guide_development_environment-variables.mdx  guide_introduction_why-baml.mdx  (+20 more)
2025-11-05-event-driven-agents/: meta.md
2025-11-11-dates-and-times/: README.md  main.py  meta.md  pyproject.toml
2025-11-18-building-an-animation-pipeline/: meta.md
2025-11-25-multimodal-evals/: README.md  add_ground_truth_to_existing_run.py  main.py  pyproject.toml  run_evaluation_with_ground_truth.py  test_ground_truth.py
2025-11-25-no-vibes-allowed-using-codelayer-to-build-codelayer/: README.md  meta.md
(+314 files in other folders)
